test-package-compiler/tests/snapshots/compiler_tests__ws_stdlib_set_codegen.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: core_erlang
---
module 'ws_stdlib_set' ['start_link'/1, 'start_link'/2, 'init'/1, 'handle_continue'/2, 'handle_cast'/2, 'handle_call'/3, 'handle_info'/2, 'code_change'/3, 'terminate'/2, 'dispatch'/4, 'safe_dispatch'/3, 'method_table'/0, 'has_method'/1, 'class_name'/0, 'spawn'/0, 'spawn'/1, 'new'/0, 'new'/1, 'superclass'/0]
  attributes ['behaviour' = ['gen_server']]

'start_link'/1 = fun (InitArgs) ->
    call 'gen_server':'start_link'('ws_stdlib_set', InitArgs, [])


'start_link'/2 = fun (ServerName, InitArgs) ->
    call 'gen_server':'start_link'(ServerName, 'ws_stdlib_set', InitArgs, [])


'spawn'/0 = fun () ->
    case call 'beamtalk_actor':'safe_spawn'('ws_stdlib_set', ~{}~) of
        <{'ok', Pid}> when 'true' ->
            let _InstReg = try call 'beamtalk_object_instances':'register'('WsStdlibSet', Pid)
                of _RegOk -> _RegOk
                catch <_RegT, _RegE, _RegS> -> 'ok'
            in
            {'beamtalk_object', 'WsStdlibSet', 'ws_stdlib_set', Pid}
        <{'error', Reason}> when 'true' ->
            let SpawnErr0 = call 'beamtalk_error':'new'('instantiation_error', 'WsStdlibSet') in
            let SpawnErr1 = call 'beamtalk_error':'with_selector'(SpawnErr0, 'spawn') in
            let SpawnErr2 = call 'beamtalk_error':'with_hint'(SpawnErr1, Reason) in
            call 'beamtalk_error':'raise'(SpawnErr2)
    end


'spawn'/1 = fun (InitArgs) ->
    case call 'erlang':'is_map'(InitArgs) of
        <'false'> when 'true' ->
            let TypeErr0 = call 'beamtalk_error':'new'('type_error', 'WsStdlibSet') in
            let TypeErr1 = call 'beamtalk_error':'with_selector'(TypeErr0, 'spawnWith:') in
            let TypeErr2 = call 'beamtalk_error':'with_hint'(TypeErr1, #{#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<87>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<120>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<68>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<121>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<103>(8,1,'integer',['unsigned'|['big']]),#<117>(8,1,'integer',['unsigned'|['big']]),#<109>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']])}#) in
            call 'beamtalk_error':'raise'(TypeErr2)
        <'true'> when 'true' ->
            case call 'beamtalk_actor':'safe_spawn'('ws_stdlib_set', InitArgs) of
                <{'ok', Pid}> when 'true' ->
                    let _InstReg = try call 'beamtalk_object_instances':'register'('WsStdlibSet', Pid)
                        of _RegOk -> _RegOk
                        catch <_RegT, _RegE, _RegS> -> 'ok'
                    in
                    {'beamtalk_object', 'WsStdlibSet', 'ws_stdlib_set', Pid}
                <{'error', Reason}> when 'true' ->
                    let SpawnErr0 = call 'beamtalk_error':'new'('instantiation_error', 'WsStdlibSet') in
                    let SpawnErr1 = call 'beamtalk_error':'with_selector'(SpawnErr0, 'spawnWith:') in
                    let SpawnErr2 = call 'beamtalk_error':'with_hint'(SpawnErr1, Reason) in
                    call 'beamtalk_error':'raise'(SpawnErr2)
            end
    end


'new'/0 = fun () ->
    let Error0 = call 'beamtalk_error':'new'('instantiation_error', 'Actor') in
    let Error1 = call 'beamtalk_error':'with_selector'(Error0, 'new') in
    let Error2 = call 'beamtalk_error':'with_hint'(Error1, #{#<85>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']])}#) in
    call 'beamtalk_error':'raise'(Error2)

'new'/1 = fun (_InitArgs) ->
    let Error0 = call 'beamtalk_error':'new'('instantiation_error', 'Actor') in
    let Error1 = call 'beamtalk_error':'with_selector'(Error0, 'new:') in
    let Error2 = call 'beamtalk_error':'with_hint'(Error1, #{#<85>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<87>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']])}#) in
    call 'beamtalk_error':'raise'(Error2)

'superclass'/0 = fun () -> 'nil'


'class_name'/0 = fun () -> 'WsStdlibSet'


'init'/1 = fun (InitArgs) ->
    let _Marker = case call 'maps':'get'('__skip_initialize__', InitArgs, 'false') of
        <'true'> when 'true' -> 'skipped'
        <'false'> when 'true' ->
            call 'erlang':'put'('$beamtalk_actor', 'ws_stdlib_set')
    end in
    let DefaultState = ~{
        '__class_mod__' => 'ws_stdlib_set'
    }~
    in let FinalState = call 'maps':'merge'(DefaultState, InitArgs)
    in case call 'maps':'get'('__skip_initialize__', InitArgs, 'false') of
        <'true'> when 'true' ->
            let CleanState = call 'maps':'remove'('__skip_initialize__', FinalState) in
            {'ok', CleanState}
        <'false'> when 'true' ->
            let _TelPid = call 'erlang':'self'() in
            let _TelStart = call 'beamtalk_actor':'maybe_execute_telemetry'(['beamtalk', 'actor', 'lifecycle', 'start'], ~{}~, ~{'pid' => _TelPid, 'class' => 'ws_stdlib_set'}~) in
            {'ok', FinalState}
    end


'handle_continue'/2 = fun (Continue, State) ->
    case Continue of
        <'initialize'> when 'true' ->
            let InitNewState = State in
            {'noreply', InitNewState}
        <_> when 'true' -> {'noreply', State}
    end


'handle_cast'/2 = fun (Msg, State) ->
    case Msg of
        <{'cast', CastSelector, CastArgs, CastPropCtx}> when 'true' ->
            let _CastCtxOk = call 'beamtalk_actor':'restore_propagated_ctx'(CastPropCtx) in
            let _OldState = call 'erlang':'get'('$bt_actor_state') in
            let _PutOk = call 'erlang':'put'('$bt_actor_state', State) in
            let _CastDispatchResult = call 'ws_stdlib_set':'safe_dispatch'(CastSelector, CastArgs, State) in
            let _RestoreOk = case _OldState of
                <'undefined'> when 'true' ->
                    call 'erlang':'erase'('$bt_actor_state')
                <_Prev> when 'true' ->
                    call 'erlang':'put'('$bt_actor_state', _Prev)
            end in
            let _ClearStack = call 'erlang':'erase'('$bt_call_stack') in
            case _CastDispatchResult of
                <{'reply', _CastResult, CastNewState}> when 'true' ->
                    {'noreply', CastNewState}
                <{'error', {CastType, CastReason, CastStacktrace}, _CastState}> when 'true' ->
                    let CastErrMsg = call 'beamtalk_error':'format_safe'({CastType, CastReason}, CastStacktrace) in
                    let _ = call 'logger':'warning'(CastErrMsg, ~{'selector' => CastSelector, 'reason' => {CastType, CastReason}, 'stacktrace' => CastStacktrace, 'domain' => ['beamtalk'|['runtime'|[]]]}~)
                    in {'noreply', State}
                <{'error', CastError, _CastState2}> when 'true' ->
                    let CastErrMsg2 = call 'beamtalk_error':'format_safe'(CastError) in
                    let _ = call 'logger':'warning'(CastErrMsg2, ~{'selector' => CastSelector, 'reason' => CastError, 'domain' => ['beamtalk'|['runtime'|[]]]}~)
                    in {'noreply', State}
            end
        <{'cast', CastSelector, CastArgs}> when 'true' ->
            let _OldState = call 'erlang':'get'('$bt_actor_state') in
            let _PutOk = call 'erlang':'put'('$bt_actor_state', State) in
            let _CastDispatchResult = call 'ws_stdlib_set':'safe_dispatch'(CastSelector, CastArgs, State) in
            let _RestoreOk = case _OldState of
                <'undefined'> when 'true' ->
                    call 'erlang':'erase'('$bt_actor_state')
                <_Prev> when 'true' ->
                    call 'erlang':'put'('$bt_actor_state', _Prev)
            end in
            let _ClearStack = call 'erlang':'erase'('$bt_call_stack') in
            case _CastDispatchResult of
                <{'reply', _CastResult, CastNewState}> when 'true' ->
                    {'noreply', CastNewState}
                <{'error', {CastType, CastReason, CastStacktrace}, _CastState}> when 'true' ->
                    let CastErrMsg = call 'beamtalk_error':'format_safe'({CastType, CastReason}, CastStacktrace) in
                    let _ = call 'logger':'warning'(CastErrMsg, ~{'selector' => CastSelector, 'reason' => {CastType, CastReason}, 'stacktrace' => CastStacktrace, 'domain' => ['beamtalk'|['runtime'|[]]]}~)
                    in {'noreply', State}
                <{'error', CastError, _CastState2}> when 'true' ->
                    let CastErrMsg2 = call 'beamtalk_error':'format_safe'(CastError) in
                    let _ = call 'logger':'warning'(CastErrMsg2, ~{'selector' => CastSelector, 'reason' => CastError, 'domain' => ['beamtalk'|['runtime'|[]]]}~)
                    in {'noreply', State}
            end
        <_> when 'true' -> {'noreply', State}
    end


'handle_call'/3 = fun (Msg, _From, State) ->
    case Msg of
        <{Selector, Args, PropCtx}> when 'true' ->
            let _CtxOk = call 'beamtalk_actor':'restore_propagated_ctx'(PropCtx) in
            let _OldState = call 'erlang':'get'('$bt_actor_state') in
            let _PutOk = call 'erlang':'put'('$bt_actor_state', State) in
            let _DispatchResult = call 'ws_stdlib_set':'safe_dispatch'(Selector, Args, State) in
            let _RestoreOk = case _OldState of
                <'undefined'> when 'true' ->
                    call 'erlang':'erase'('$bt_actor_state')
                <_Prev> when 'true' ->
                    call 'erlang':'put'('$bt_actor_state', _Prev)
            end in
            let _ClearStack = call 'erlang':'erase'('$bt_call_stack') in
            case _DispatchResult of
                <{'reply', Result, NewState}> when 'true' ->
                    {'reply', {'ok', Result}, NewState}
                <{'error', Error, ErrState}> when 'true' ->
                    {'reply', {'error', Error}, ErrState}
            end
        <{Selector, Args}> when 'true' ->
            let _OldState = call 'erlang':'get'('$bt_actor_state') in
            let _PutOk = call 'erlang':'put'('$bt_actor_state', State) in
            let _DispatchResult = call 'ws_stdlib_set':'safe_dispatch'(Selector, Args, State) in
            let _RestoreOk = case _OldState of
                <'undefined'> when 'true' ->
                    call 'erlang':'erase'('$bt_actor_state')
                <_Prev> when 'true' ->
                    call 'erlang':'put'('$bt_actor_state', _Prev)
            end in
            let _ClearStack = call 'erlang':'erase'('$bt_call_stack') in
            case _DispatchResult of
                <{'reply', Result, NewState}> when 'true' ->
                    {'reply', {'ok', Result}, NewState}
                <{'error', Error, ErrState}> when 'true' ->
                    {'reply', {'error', Error}, ErrState}
            end
    end


'handle_info'/2 = fun (Msg, State) ->
    call 'beamtalk_actor':'handle_info'(Msg, State)


'code_change'/3 = fun (OldVsn, State, Extra) ->
    call 'beamtalk_hot_reload':'code_change'(OldVsn, State, Extra)


'terminate'/2 = fun (Reason, State) ->
    let _TelPid = call 'erlang':'self'() in
    let _TelStop = call 'beamtalk_actor':'maybe_execute_telemetry'(['beamtalk', 'actor', 'lifecycle', 'stop'], ~{}~, ~{'pid' => _TelPid, 'class' => 'ws_stdlib_set', 'reason' => Reason}~) in
    %% Call terminate: method if defined — exceptions must not prevent shutdown
    let Self = call 'beamtalk_actor':'make_self'(State) in
    let _TermDisp = try call 'ws_stdlib_set':'dispatch'('terminate:', [Reason], Self, State)
        of _TermOk -> 'ok'
        catch <_TermT, _TermE, _TermS> -> 'ok'
    in 'ok'


'safe_dispatch'/3 = fun (Selector, Args, State) ->
    let Self = call 'beamtalk_actor':'make_self'(State) in
    try call 'ws_stdlib_set':'dispatch'(Selector, Args, Self, State)
    of Result -> Result
    catch <Type, Error, Stacktrace> -> {'error', {Type, Error, Stacktrace}, State}


'dispatch'/4 = fun (Selector, Args, Self, State) ->
    case Selector of
        <OtherSelector> when 'true' ->
            %% BT-229/ADR 0005: Check extension registry before hierarchy walk
            let ExtLookup = try call 'beamtalk_extensions':'lookup'('WsStdlibSet', OtherSelector)
                of ExtLookupResult -> ExtLookupResult
                catch <_EType, _EReason, _EStack> -> 'not_found'
            in
            case ExtLookup of
                <{'ok', ExtFun, _ExtOwner}> when 'true' ->
                    %% BT-1512/BT-2250: Invoke via the runtime helper, which
                    %% accepts both the 3-arity actor shape
                    %% (fun(Args, Self, State) -> {Result, NewState}) and the
                    %% 2-arity value shape (fun(Args, Self) -> Result), so a
                    %% foreign extension whose codegen-time arity could not be
                    %% resolved still dispatches correctly. Returns {reply, _, _}.
                    call 'beamtalk_dispatch':'invoke_extension'(ExtFun, Args, Self, State)
                <'not_found'> when 'true' ->
                    %% ADR 0006: Try hierarchy walk before DNU
                    case call 'beamtalk_dispatch':'super'(OtherSelector, Args, Self, State, 'WsStdlibSet') of
                        <{'reply', InheritedResult, InheritedState}> when 'true' ->
                            {'reply', InheritedResult, InheritedState}
                        <{'error', _DispatchError}> when 'true' ->
                            %% Not in hierarchy - try doesNotUnderstand:args: (BT-29)
                            let DnuSelector = 'doesNotUnderstand:args:' in
                            let Methods = call 'ws_stdlib_set':'method_table'() in
                            case call 'maps':'is_key'(DnuSelector, Methods) of
                                <'true'> when 'true' ->
                                    call 'ws_stdlib_set':'dispatch'(DnuSelector, [OtherSelector, Args], Self, State)
                                <'false'> when 'true' ->
                                    %% No DNU handler - return #beamtalk_error{} record
                                    let ClassName = 'WsStdlibSet' in
                                    let Error0 = call 'beamtalk_error':'new'('does_not_understand', ClassName) in
                                    let Error1 = call 'beamtalk_error':'with_selector'(Error0, OtherSelector) in
                                    let HintMsg = #{#<67>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<107>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<103>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<117>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<39>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<84>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<39>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<118>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<102>(8,1,'integer',['unsigned'|['big']]),#<121>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<109>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<120>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']])}# in
                                    let Error = call 'beamtalk_error':'with_hint'(Error1, HintMsg) in
                                    {'error', Error, State}
                            end
                    end
            end
    end


'method_table'/0 = fun () ->
    ~{}~


'has_method'/1 = fun (Selector) ->
    call 'lists':'member'(Selector, [])

end
